deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-webapp
  name: go-webapp
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
        - image: katnip/go-webapp:latest
          imagePullPolicy: Always
          name: golang-webapp
          ports:
            - containerPort: 8080
              protocol: TCP
      dnsPolicy: ClusterFirst
