deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-webapp
  name: go-webapp
  namespace: default
spec:
  ports:
    - name: http-svc
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: go-webapp
  sessionAffinity: None
  type: ClusterIP
